tests/snapshots/arg__required_if_eq_all-2.snap
---
source: tests/arg.rs
expression: output2
---
command cat <<'EOF_8b7c37b4'
[1m[31merror:[0m the following required arguments were not provided:
  [32m--config <cfg>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--extra[0m <extra> [1m--option[0m <option> [1m--config[0m <cfg>

For more information, try '[1m--help[0m'.
EOF_8b7c37b4
exit 1
