tests/snapshots/arg__required_if_eq_any.snap
---
source: tests/arg.rs
expression: output1
---
command cat <<'EOF_e50ac9c2'
[1m[31merror:[0m the following required arguments were not provided:
  [32m--out <out>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--mode[0m <mode> [1m--out[0m <out>

For more information, try '[1m--help[0m'.
EOF_e50ac9c2
exit 1
