tests/snapshots/arg__required_if_eq_case_insensitive.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_790f4cff'
[1m[31merror:[0m the following required arguments were not provided:
  [32m--config <cfg>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--other[0m <other> [1m--config[0m <cfg>

For more information, try '[1m--help[0m'.
EOF_790f4cff
exit 1
