tests/snapshots/arg__requires-2.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_84e1a07a'
[1m[31merror:[0m the following required arguments were not provided:
  [32m<input>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--config[0m <cfg> <input>

For more information, try '[1m--help[0m'.
EOF_84e1a07a
exit 1
