tests/snapshots/arg__requires_ifs-1.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_e4e9c6fd'
[1m[31merror:[0m the following required arguments were not provided:
  [32m<other>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--config[0m <config> <other>

For more information, try '[1m--help[0m'.
EOF_e4e9c6fd
exit 1
